# mapedit

./: .gitmodules  2fort.mtl  LICENSE  ak47.glb  compile_commands.json  default.nix  effects.md  gi.md  imgui.ini  keybinds.md  makefile  mapedit.cpp  meson.build  tgizmo.glb  todo  vulkan
.cache/clangd/index/: aabb.cpp.E449E61F4DAAF8D9.idx  brush.cpp.D642E5D381075313.idx  camera.cpp.45BF299D5BFAB2E3.idx  cgltf.h.50773960FAA9DFF0.idx  common.h.D3D3AE9B1BD27F24.idx  editing.cpp.6656851DD9AD33D0.idx  glad.c.4944ADAE19B9163B.idx  glad.h.04FC1C3EF23B2F14.idx  gltf.cpp.D7716AC9DCD6369D.idx  imconfig.h.236144FE87B0D43A.idx  imgui.h.9B3A17BDB908F4CE.idx  imgui_impl_opengl3.h.FD773B479C801669.idx  imgui_impl_sdl2.h.821C3902DA087836.idx  khrplatform.h.256598F8CD5D7A62.idx  main.cpp.DCE8F7DA19CD4F36.idx  renderer.h.5D4813944C53501F.idx  scene.cpp.1447A0E40AE41F51.idx  shader.c.9A51329FCB60180F.idx  stb_image.h.2EBE8A29E08A239B.idx  util.c.90068EE4687CA969.idx
models/: ak47.glb
pch/: mapedit_pch.h
res/shaders/: fortnite.frag  fortnite.vert  grid.frag  solid_color.frag  text.frag  text.vert
res/shaders/compiled/: fortnite.frag.spv  fortnite.vert.spv
src/: camera.cpp  camera.hpp  common.h  main.cpp  renderer.h  scene.cpp  scene.hpp  util.c
src/meshes/: brush.cpp  brush.hpp  editing.cpp  editing.hpp
src/physics/: aabb.cpp  aabb.hpp
src/renderer/: gltf.cpp  gltf.hpp  lights.c  shader.c  shader.cpp  shader.hpp  text.c
